# libuvc-theta-sample

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: Findlib-uvc-theta.cmake
